--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Play with Hugo",
   "main": "index.js",
   "scripts": {
-    "deploy": "gh-pages deploy public",
+    "deploy": "gh-pages -d public",
     "build": "rm -rf public && hugo"
   },
   "keywords": [],
