--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "copy-build": "rm -rf deploy-build && cp -R app/build deploy-build && cp -R server/api deploy-build/api",
     "build:api": "cd server && rm -rf api && hugo -d api",
     "build:app": "cd app && yarn build && cd build",
+    "predeploy": "npm run build && ./update-path.sh",
     "deploy": "gh-pages -d deploy-build",
     "deploy:api": "gh-pages -d server/api",
     "deploy:app": "gh-pages -d app/build"
