--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "copy-build": "rm -rf deploy-build && cp -R app/build deploy-build && cp -R server/api deploy-build/api",
     "build:api": "cd server && rm -rf api && hugo -d api",
     "build:app": "cd app && npm run build",
+    "predeploy": "./update-path.sh",
     "deploy": "gh-pages -d deploy-build",
     "deploy:api": "gh-pages -d server/api",
     "deploy:app": "gh-pages -d app/build"
