--- a/.github/workflows/api2md.yml
+++ b/.github/workflows/api2md.yml
@@ -9,7 +9,7 @@ on:
 
 
 jobs:
-  build:
+  fetch-data-from-api:
     runs-on: ubuntu-latest
     steps:
 
@@ -29,7 +29,7 @@ jobs:
           pip install -r requirements.txt
           
       - name: execute py script # run py-script to get the latest data
-        run: main.py
+        run: python main.py
           
       - name: commit files
         run: |
