--- a/.github/workflows/api2md.yml
+++ b/.github/workflows/api2md.yml
@@ -38,7 +38,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: markdown-files
-          path: ./output-files/*.md
+          path: ./output_files/*.md
         
   Publish:
     name: Publish
@@ -54,7 +54,7 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: markdown-files
-          path: ./output-files
+          path: ./output_files
           
       - name: Display structure of downloaded files
         run: pwd && ls -R
