Activate cron jobs for gh-action

--- a/.github/workflows/api2md.yml
+++ b/.github/workflows/api2md.yml
@@ -2,8 +2,8 @@ name: Update md files Test
 
 on:
   # push:
-  # schedule:
-  #  - cron: "*/5 * * * *" # Run every 5 mins
+  schedule:
+   - cron: "*/5 * * * *" # Run every 5 mins
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
