--- a/.github/workflows/test-release.yml
+++ b/.github/workflows/test-release.yml
@@ -5,6 +5,10 @@ on:
       - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.1
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+    inputs:
+      commitish:
+        description: 'Commit Hash'     
+        required: true
 
 name: Create Release
 
@@ -13,6 +17,9 @@ jobs:
     name: Create Release
     runs-on: ubuntu-latest
     steps:
+      - name: printInputs
+        run: |
+          echo "Commit Hash: ${{ github.event.inputs.commitish }}"  
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Create Release
