--- a/.github/workflows/test-release.yml
+++ b/.github/workflows/test-release.yml
@@ -9,6 +9,9 @@ on:
       commitish:
         description: 'Commit Hash'     
         required: true
+      tagName:
+        description: 'Tag Name'     
+        required: true
 
 name: Create Release
 
@@ -28,8 +31,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+          tag_name: ${{ github.event.inputs.tagName }}
+          release_name: Release ${{ github.event.inputs.tagName }}
           body: |
             Changes in this Release
             - First Change
