--- a/.github/workflows/test-release.yml
+++ b/.github/workflows/test-release.yml
@@ -33,6 +33,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
           release_name: Release ${{ github.event.inputs.tagName }}
+          tag_name: ${{ github.event.inputs.tagName }}
           commitish: ${{ github.event.inputs.commitish }}
           body: |
             Changes in this Release
