--- a/.github/workflows/send_version.yml
+++ b/.github/workflows/send_version.yml
@@ -15,10 +15,10 @@ jobs:
         myToken: ${{ github.token }}
         exclude_types: "draft"
         view_top: 1
-    - uses: actions/download-artifact@v2
-      name: "Get ISSUE id"
+    - name: Download artifact
+      uses: dawidd6/action-download-artifact@v2
       with:
-        name: issue_id_file
+        workflow: update_source.yml
     - name: "Print TAG NAME"
       run: |
         echo "tag_name: ${{ steps.last_release.outputs.tag_name }}"
