--- a/.github/workflows/update_source.yml
+++ b/.github/workflows/update_source.yml
@@ -5,7 +5,7 @@ on:
         description: 'Issue ID'     
         required: true
      
-name: Update Source & upload issue id
+name: Upload issue id
 
 jobs:
   upload_issue_id:
