--- a/.github/workflows/send_version.yml
+++ b/.github/workflows/send_version.yml
@@ -27,3 +27,7 @@ jobs:
         echo "tag_name: ${{ steps.last_release.outputs.tag_name }}"
         cat issue_id_file/issue_id.txt
         echo ${{ github.head_ref }}.${{ github.sha }}
+    # delete-artifact
+    - uses: geekyeggo/delete-artifact@v1
+      with:
+        name: issue_id_file
