--- a/.github/workflows/add-comment.yml
+++ b/.github/workflows/add-comment.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           path: main
       - name: Set commitish
-        run: echo '::set-output name=commitish::git log --pretty=format:'%H' -1'
+        run: echo '::set-output name=commitish::$(git log --pretty=format:'%H' -1)'
         id: commit-hash
       - name: Get Commit Hash
         run: echo "Commit Hash ${{ steps.commit-hash.outputs.commitish }}"
