--- a/.github/workflows/add-comment.yml
+++ b/.github/workflows/add-comment.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Set commitish
         run: |
           output="$(git log --pretty=format:'%H' -1)"
-          echo '::set-output name=commitish::${{output}}'
+          echo '::set-output name=commitish::${output}'
         id: commit-hash
       - name: Get Commit Hash
         run: echo "Commit Hash ${{ steps.commit-hash.outputs.commitish }}"
