--- a/.github/workflows/add-comment.yml
+++ b/.github/workflows/add-comment.yml
@@ -4,7 +4,7 @@ on:
     inputs:
       issue_id:
         description: 'Issue ID'     
-        required: true
+        required: false
       version:
         description: 'Version'     
         required: false
@@ -16,14 +16,8 @@ jobs:
     name: Add comment
     runs-on: ubuntu-latest
     steps:
-      - name: printInputs
-        run: |
-          echo "Version: ${{ github.event.inputs.version }}"
-          echo "Issue Id: ${{ github.event.inputs.issue_id }}"
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          path: main
+      - name: checkout current repo
+        uses: actions/checkout@v2 # checkout the repository content to github runner
       - name: Set commitish
         run: |
           ls -ltr
