--- a/.github/workflows/add-comment.yml
+++ b/.github/workflows/add-comment.yml
@@ -22,7 +22,7 @@ jobs:
         run: |
           ls -ltr
           output="$(git log --pretty=format:'%H' -1)"
-          echo '::set-output name=commitish::$output'
+          echo "::set-output name=commitish::`echo $(git log --pretty=format:'%H' -1)`"
         id: commit-hash
       - name: Get Commit Hash
         run: echo "Commit Hash ${{ steps.commit-hash.outputs.commitish }}"
