--- a/.github/workflows/test-release.yml
+++ b/.github/workflows/test-release.yml
@@ -27,7 +27,23 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Create Release
+        if: ( ${{ github.event.inputs.commitish }} == '' )
         id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+        with:
+          release_name: Release ${{ github.event.inputs.tagName }}
+          tag_name: ${{ github.event.inputs.tagName }}
+          body: |
+            Changes in this Release
+            - First Change
+            - Second Change
+          draft: false
+          prerelease: false
+      - name: Create Release with commitish
+        if: ( ${{ github.event.inputs.commitish }} != '' )
+        id: create_release_commitish
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
