--- a/.github/workflows/test-release.yml
+++ b/.github/workflows/test-release.yml
@@ -24,13 +24,13 @@ jobs:
         run: |
           echo "Commit Hash: ${{ github.event.inputs.commitish }}"
           echo "Tag Name: ${{ github.event.inputs.tagName }}"
-          echo "${{ github.event.inputs.commitish  == ''  }}"
+          echo "${{ github.event.inputs.commitish  == 'NA'  }}"
           echo "(${{ github.event.inputs.commitish }} == '')"
           
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Create Release
-        if: ${{ github.event.inputs.commitish  == ''  }}
+        if: ${{ github.event.inputs.commitish  == 'NA'  }}
         id: create_release
         uses: actions/create-release@v1
         env:
@@ -45,7 +45,7 @@ jobs:
           draft: false
           prerelease: false
       - name: Create Release with commitish
-        if: ${{ github.event.inputs.commitish  != '' }}
+        if: ${{ github.event.inputs.commitish  != 'NA' }}
         id: create_release_commitish
         uses: actions/create-release@v1
         env:
