--- a/.github/workflows/test-release.yml
+++ b/.github/workflows/test-release.yml
@@ -45,9 +45,9 @@ jobs:
           draft: false
           prerelease: false
       - name: Verify Commit SHA
-        if: ${{ github.event.inputs.commitish  != 'NA' }}
+        if: ${{ github.event.inputs.commitish != 'NA' }}
         run: |
-          if git cat-file -e $sha^{commit}; then
+          if git cat-file -e ${{ github.event.inputs.commitish }}a^{commit}; then
            echo "::set-output name=sha_exists::`echo true`"
           else
            echo "::set-output name=sha_exists::`echo false`"
