--- a/.github/workflows/test-release.yml
+++ b/.github/workflows/test-release.yml
@@ -66,7 +66,6 @@ jobs:
           body: |
             Changes in this Release
             - First Change
-            - Second Change
           draft: false
           prerelease: false
       - name: Add Comment
@@ -76,4 +75,4 @@ jobs:
           issue-number: 1
           body: |
             ERROR
-            - Commit Hash:- ${{ steps.commit-hash.outputs.commitish }} doesn't exist.
+            - Commit Hash: ${{ github.event.inputs.commitish }} doesn't exist.
