--- a/.github/workflows/test-release.yml
+++ b/.github/workflows/test-release.yml
@@ -47,6 +47,8 @@ jobs:
       - name: Verify Commit SHA
         if: ${{ github.event.inputs.commitish != 'NA' }}
         run: |
+          pwd
+          ls -ltR
           if git cat-file -e ${{ github.event.inputs.commitish }}^{commit}; then
            echo "::set-output name=sha_exists::`echo 1`"
           else
