--- a/.github/workflows/trigger-on-label-pr.yml
+++ b/.github/workflows/trigger-on-label-pr.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - "*"
   pull_request:
-    types: [ labeled ]
+    types: [labeled, opened, synchronize, reopened]
 
 jobs:
   build:
