--- a/.github/workflows/trigger-on-label-pr.yml
+++ b/.github/workflows/trigger-on-label-pr.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   build:
-    if: ${{ github.event.label.name == 'run-test' }}
+    if: contains( toJson(github), 'run-test' )
     runs-on: ubuntu-latest
 
     steps:
