--- a/.github/workflows/trigger-on-label-pr.yml
+++ b/.github/workflows/trigger-on-label-pr.yml
@@ -1,19 +1,16 @@
 name: CI
 
 on:
-  push:
-    branches:
-      - "*"
   pull_request:
     types: [labeled, opened, synchronize, reopened]
 
 jobs:
   build:
-    if: contains(toJson(github), 'run-test')
+    if: contains(github.event.pull_request.labels.*.name, 'run-test')
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
     - name: Run Script
-      run: echo toJson(github)
+      run: echo "Run Test"
   
